Хотфикс кучи запросов на бд